added soft delete, update mapper